[build-system]
requires = ["setuptools>=41", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "embcompare"
description = "EmbCompare is a small python package that helps you compare your embeddings both visually and numerically."
authors = [
    { name = "Agence Data Services PE Aix / Nantes" },
    { name = "Hakim", email = "hakim.cheikh-ext@pole-emploi.fr" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7,<4.0"
dependencies = [
    "gensim>=4.0,<5.0",
    "scikit-learn>=1.1,<1.2",
    "numpy>=1.19,<2.0",
    "omegaconf>=2.0,<3.0",
    "click>=8.0,<9.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/OSS-Pole-Emploi/emcompare"
documentation = "https://github.com/OSS-Pole-Emploi/emcompare"
repository = "https://github.com/OSS-Pole-Emploi/emcompare"
"Bug Tracker" = "https://github.com/OSS-Pole-Emploi/emcompare/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[project.optional-dependencies]
gui = [
    "streamlit>=1.12,<2",
    "pandas>=1.3,<2.0",
    "altair>=4.0,<5.0",
    "loguru>=0.6,<1.0",
]
dev = [
    "black>=19.0",
    "isort>=4.3",
    "pytest>=7.0,<8.0",
    "pytest-cov>=3.0,<4.0",
    "pytest-datadir>=1.0,<2.0",
    "nox>=2022",
]
test = ["pytest>=7.0,<8.0", "pytest-cov>=3.0,<4.0", "pytest-datadir>=1.0,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=embcompare --cov-fail-under=80 --cov-config=.coveragerc"
filterwarnings = ["ignore:Please use `triu` from the `scipy.linalg`"]

[project.scripts]
embcompare = "embcompare.cli:cli"
