[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "embcompare"
description = "EmbCompare is a small python package that helps you compare your embeddings both visually and numerically."
authors = [
    { name = "Agence Data Services PE Nantes", email = "contactadsaiframeworks.00619@pole-emploi.fr" },
]
maintainers = [
    { name = "Agence Data Services PE Nantes", email = "contactadsaiframeworks.00619@pole-emploi.fr" },
]
license = { text = "AGPL-3.0" }
readme = "README.md"
keywords = [
    "embeddings",
    "embedding-vectors",
    "embeddings-similarity",
    "embeddings-comparison",
    "streamlit-dashboard",
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

requires-python = ">=3.8,<4.0"
dependencies = [
    "gensim>=4.0,<5.0",
    "scikit-learn>=1.1,<1.4",
    "numpy>=1.19,<2.0",
    "omegaconf>=2.0,<3.0",
    "click>=8.0,<9.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/OSS-Pole-Emploi/emcompare"
documentation = "https://github.com/OSS-Pole-Emploi/emcompare"
repository = "https://github.com/OSS-Pole-Emploi/emcompare"
"Bug Tracker" = "https://github.com/OSS-Pole-Emploi/emcompare/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/embcompare/_version.py"

[project.optional-dependencies]
gui = [
    "streamlit>=1.12,<2",
    "pandas>=1.3,<3.0",
    "altair>=4.0,<6.0",
    "loguru>=0.6,<1.0",
]
dev = [
    "black>=19.0",
    "isort>=4.3",
    "pytest>=7.0,<9.0",
    "pytest-cov>=3.0,<5.0",
    "pytest-datadir>=1.0,<2.0",
    "nox>=2022",
]
test = ["pytest>=7.0,<9.0", "pytest-cov>=3.0,<5.0", "pytest-datadir>=1.0,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=embcompare --cov-fail-under=80 --cov-config=.coveragerc"
filterwarnings = [
    "ignore:Please use `triu` from the `scipy.linalg`",
    "ignore:The hookimpl CovPlugin.pytest",
]

[tool.isort]
profile = "black"

[tool.bandit]
skips = ["B301", "B403"]

[project.scripts]
embcompare = "embcompare.cli:cli"
